<resources>
    <string name="app_name">SpaceX</string>
    <string name="filter_title">Filter</string>
    <string name="launch_date">Launch Date</string>
    <string name="successful_launch">Successful Launch</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="company_title">Company</string>
    <string name="launches_title">Launches</string>
    <string name="company_info">%s was founded by  %s in  %d. It has now  %d employees,  %d launch sites, and is valued at USD  %s</string>
    <string name="company_info_error_text">Sorry, we can\'t load the company info at the moment</string>
    <string name="launches_error_text">Sorry, we can\'t load the launches list at the moment</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="company_info_error_desc">Error icon to be shown when company info fails</string>
    <string name="launches_error_desc">Error icon to be shown when the launches request fails</string>
    <string name="launch_image">Launch image</string>
    <string name="mission_info">Mission: %s</string>
    <string name="launch_date_time_info">Date/time: %s at %s</string>
    <string name="launch_rocket_info">Rocket: %s / %s</string>
    <string name="launch_days_from_since">Days %s %s</string>
    <string name="launch_success">Icon to show whether the launch was a success or not</string>
    <string name="since">since: %s</string>
    <string name="from_now">from now: %s</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="link_to_open_title">Select link to open</string>

</resources>