<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/medium_space"
    android:weightSum="4">

    <ImageView
        android:id="@+id/launch_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/launch_image"
        tools:src="@drawable/ic_error" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_info" />

        <TextView
            android:id="@+id/date_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_date_time_info" />

        <TextView
            android:id="@+id/rocket_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_rocket_info" />

        <TextView
            android:id="@+id/days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_days_from_since" />
    </LinearLayout>


    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/launch_success"
        android:scaleType="center"
        tools:src="@drawable/ic_check" />

</LinearLayout>