<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <include
        android:id="@+id/filter"
        layout="@layout/filter_section" />

    <LinearLayout
        android:id="@+id/company_info_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/company_title"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_sky_500"
            android:padding="@dimen/small_space"
            android:text="@string/company_title" />

        <Button
            android:id="@+id/refresh_company_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/refresh"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/company_info_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/company_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_space"
            android:paddingVertical="@dimen/small_space"
            android:text="@string/company_info" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/launches_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/launches_title"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_sky_500"
            android:padding="@dimen/small_space"
            android:text="@string/launches_title" />
    </LinearLayout>


</LinearLayout>